--- a/frontend/templates/__base.html
+++ b/frontend/templates/__base.html
@@ -3,53 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}TASK-MATE{% endblock %}</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="/static/css/light.css">
+    <title>Menu Bar</title>
 </head>
 <body>
-    {% block styles %} 
-        <style>
-            body {
-                background-color: burlywood;
-            }
-        </style>
-    
-    {% endblock %}
+    <nav>
+        <div class="nav-bar">
+            <i class='bx bx-menu sidebar-open'></i>
+            <span class="logo nav-logo"><a href="#">WORKSPACE</a></span>
 
+            <div class="menu">
+                <div class="logo-toggle">
+                    <span class="logo"><a href="#">WORKSPACE</a></span>
+                    <i class='bx bx-x sidebar-close'></i>
+                </div>
 
-    {% block navigation %}
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-            <a class="navbar-brand" href="#">Navbar</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" style="color: #090909; opacity: 1;" href="#">👤 {{ nickname }}</a>
-                </li>                
+                <ul class="nav-links">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Portfolio</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Contacts</a></li>
+                    <li><a class="nav-link disabled" style="color: #090909; opacity: 1;" href="#">👤 {{ nickname }}</a></li>  
                 </ul>
-                <form class="d-flex" role="search">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
             </div>
+
+            <div class="darkLight-searchBox">
+                <div class="dark-light">
+                    <i class='bx bx-moon moon'></i>
+                    <i class='bx bx-sun sun'></i>
+                </div>
+
+                <div class="searchBox">
+                    <div class="searchToggle">
+                        <i class='bx bx-x cancel'></i>
+                        <i class='bx bx-search search'></i>
+                    </div>
+                    <div class="search-field">
+                        <input type="text" placeholder="Search...">
+                        <i class='bx bx-search'></i>
+                    <div>
+                </div>
             </div>
-        </nav>
-        
-    {% endblock %}
-
-    {% block content %}
-        
-    {% endblock %}
-
-    {% block scrtipts %}
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    {% endblock %}
-
+        </div>
+    </nav>
+    <script src="/static/js/light.js"></script>
 </body>
 </html>
