--- a/frontend/templates/form_template.html
+++ b/frontend/templates/form_template.html
@@ -1,16 +1,20 @@
+{% extends '__log.html' %}
 {% from '__helpers.html' import form_generate %}
-
-
 
 {% block content %}
 <div class="container">
-  {% with messages = get_flashed_messages() %} {% if messages %}
-  <div class="form-message">
-    {% for message in messages %}
-    <p>{{ message }}</p>
-    {% endfor %}
-  </div>
-  {% endif %} {% endwith %} {{ form_generate(form) }}
+  {% with messages = get_flashed_messages() %}
+    {% if messages %}
+      <div class="form-message">
+        {% for message in messages %}
+          <p>{{ message }}</p>
+        {% endfor %}
+      </div>
+    {% endif %}
+  {% endwith %}
+
+  {{ form_generate(form) }}
+
   <p>
     Do not have an account?
     <a href="{{ url_for('register') }}">You can create here!</a>
