трішки виправив css бо коли ти вводив щось у search bar коли був ввімкнений темний режим написане повідомлення в пошуковій строці було прозрачним

--- a/frontend/static/css/light.css
+++ b/frontend/static/css/light.css
@@ -247,7 +247,7 @@ nav.active .nav-bar .nav-logo a {
 }
 
 body.dark .search-field input{
-    color: var(--nav-color)
+    color: var(--text-color)
 }
 
 .search-field i{
