трішки оновив site.html

--- a/frontend/templates/site.html
+++ b/frontend/templates/site.html
@@ -61,8 +61,8 @@
     <div id="sidebar" class="sidebar">
         <div class="sidebar-content">
             <a href="" class="nav-link"><b>Девайси користувачів</b></a>
-            <a href="" class="nav-link"><b></b></a>
-            <a href="" class="nav-link"><b>Devices</b></a>
+            <a href="" class="nav-link"><b>наші встроєні пристрої</b></a>
+            <a href="" class="nav-link"><b>інші питання</b></a>
         </div>
     </div>
     
