Formula form done but without proper css

--- a/frontend/templates/__base.html
+++ b/frontend/templates/__base.html
@@ -24,7 +24,7 @@
                     <li><a href="#">About</a></li>
                     <li><a href="#">Portfolio</a></li>
                     <li><a href="#">Services</a></li>
-                    <li><a href="#">Contacts</a></li>
+                    <li><a href="/formula">Formula</a></li>
                     <li><a class="nav-link disabled" style="color: #090909; opacity: 1;" href="#">👤 {{ nickname }}</a></li>  
                 </ul>
             </div>
